kubernetes/turing/media/jellyfin/app/cnp.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: jellyfin-cross-cluster
  namespace: media
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: jellyfin
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.cilium.k8s.policy.cluster: raspberry
            io.kubernetes.pod.namespace: network
            app.kubernetes.io/name: ingress-nginx
      toPorts:
        - ports:
            - port: "8096"
              protocol: TCP
